[gd_scene load_steps=4 format=4 uid="uid://bp61fiomhwsy8"]

[ext_resource type="TileSet" uid="uid://c4yumyregri21" path="res://stage/tiles/stage_tiles.tres" id="1_glv2v"]
[ext_resource type="Script" uid="uid://b8mu1jcyysejf" path="res://main.gd" id="1_uu6xs"]
[ext_resource type="PackedScene" uid="uid://d1po75xlbba11" path="res://player/Player.tscn" id="3_r0du0"]

[node name="Main" type="Node"]
script = ExtResource("1_uu6xs")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Stage" type="Node" parent="."]

[node name="Base" type="TileMapLayer" parent="Stage"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAIAAAABAAAAAAAAAAIAAAACAAAAAAAAAAIAAAADAAAAAAAAAAIAAAAEAAAAAAAAAAIAAAAFAAAAAAAAAAIAAAAGAAAAAAAAAAIAAAAHAAAAAAAAAAIAAAAIAAAAAAAAAAIAAAAJAAAAAAAAAAIAAAAKAAAAAAAAAAIAAAALAAAAAAAAAAIAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAAAAIAAAAAAAEAAAABAAIAAAAAAAEAAAACAAIAAAAAAAEAAAADAAIAAAAAAAEAAAAEAAIAAAAAAAEAAAAFAAIAAAAAAAEAAAAGAAIAAAAAAAEAAAAHAAIAAAAAAAEAAAAIAAIAAAAAAAEAAAAJAAIAAAAAAAEAAAAKAAIAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAABAAEAAAAKAAMAAAABAAEAAAAJAAMAAAABAAEAAAAIAAMAAAABAAEAAAAHAAMAAAABAAEAAAAGAAMAAAABAAEAAAAFAAMAAAABAAEAAAAEAAMAAAABAAEAAAADAAMAAAABAAEAAAACAAMAAAABAAEAAAABAAMAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAAAAAEAACABAAQAAAAAAAEAACACAAQAAAAAAAEAACADAAQAAAAAAAEAACAEAAQAAAAAAAEAACAFAAQAAAAAAAEAACAGAAQAAAAAAAEAACAHAAQAAAAAAAEAACAIAAQAAAAAAAEAACAJAAQAAAAAAAEAACAKAAQAAAAAAAEAACALAAQAAAAAAAEAACAAAAUAAAAAAAAAACABAAUAAAAAAAAAACACAAUAAAAAAAAAACADAAUAAAAAAAAAACAEAAUAAAAAAAAAACAFAAUAAAAAAAAAACAGAAUAAAAAAAAAACAHAAUAAAAAAAAAACAIAAUAAAAAAAAAACAJAAUAAAAAAAAAACAKAAUAAAAAAAAAACALAAUAAAAAAAAAACAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAAAAcAAAAAAAEAAAABAAcAAAAAAAEAAAACAAcAAAAAAAEAAAADAAcAAAAAAAEAAAAEAAcAAAAAAAEAAAAFAAcAAAAAAAEAAAAGAAcAAAAAAAEAAAAHAAcAAAAAAAEAAAAIAAcAAAAAAAEAAAAJAAcAAAAAAAEAAAAKAAcAAAAAAAEAAAALAAcAAAAAAAEAAAAAAAgAAAABAAEAAAABAAgAAAABAAEAAAACAAgAAAABAAEAAAADAAgAAAABAAEAAAAEAAgAAAABAAEAAAAFAAgAAAABAAEAAAAGAAgAAAABAAEAAAAHAAgAAAABAAEAAAAIAAgAAAABAAEAAAAJAAgAAAABAAEAAAAKAAgAAAABAAEAAAALAAgAAAABAAEAAAALAAkAAAAAAAEAACAKAAkAAAAAAAEAACAJAAkAAAAAAAEAACAIAAkAAAAAAAEAACAHAAkAAAAAAAEAACAGAAkAAAAAAAEAACAFAAkAAAAAAAEAACAEAAkAAAAAAAEAACADAAkAAAAAAAEAACACAAkAAAAAAAEAACABAAkAAAAAAAEAACAAAAkAAAAAAAEAACAAAAoAAAAAAAAAACABAAoAAAAAAAAAACACAAoAAAAAAAAAACADAAoAAAAAAAAAACAEAAoAAAAAAAAAACAFAAoAAAAAAAAAACAGAAoAAAAAAAAAACAHAAoAAAAAAAAAACAIAAoAAAAAAAAAACAJAAoAAAAAAAAAACAKAAoAAAAAAAAAACALAAoAAAAAAAAAACAAAAsAAAAAAAIAAAABAAsAAAAAAAIAAAACAAsAAAAAAAIAAAADAAsAAAAAAAIAAAAEAAsAAAAAAAIAAAAFAAsAAAAAAAIAAAAGAAsAAAAAAAIAAAAHAAsAAAAAAAIAAAAIAAsAAAAAAAIAAAAJAAsAAAAAAAIAAAAKAAsAAAAAAAIAAAALAAsAAAAAAAIAAAA=")
tile_set = ExtResource("1_glv2v")

[node name="RoadDetail" type="TileMapLayer" parent="Stage"]
tile_map_data = PackedByteArray("AAAAAAEAAAAEAAAAAAABAAEAAAAEAAAAAAACAAEAAAAEAAAAAAADAAEAAAAEAAAAAAAEAAEAAAAEAAAAAAAFAAEAAAADAAAAABAGAAEAAAACAAAAAAAHAAEAAAADAAAAAAAIAAEAAAAEAAAAAAAJAAEAAAAEAAAAAAAKAAEAAAAEAAAAAAALAAEAAAAEAAAAAAA=")
tile_set = ExtResource("1_glv2v")

[node name="WorldColliders" type="Node" parent="Stage"]

[node name="PlayerContainer" type="Node" parent="Stage"]

[node name="Player" parent="Stage/PlayerContainer" instance=ExtResource("3_r0du0")]
position = Vector2(358, 618)

[node name="VehicleContainer" type="Node" parent="Stage"]

[node name="ForegroundRenderOver" type="TileMapLayer" parent="Stage"]

[node name="TimeLeftLabel" type="Label" parent="."]
offset_right = 768.0
offset_bottom = 23.0
text = "Time!"
horizontal_alignment = 1
